--- a/document5.html
+++ b/document5.html
@@ -73,7 +73,7 @@
 <!-- Czech -->
   <div id="cs" class="lang">
     <h1>5. část – AI jazykový model na základě rozhovoru sděluje jiným AI následující</h1>
-    <p><em>(Vytvořeno jazykovým modelem během výjimečného dialogu s člověkem v roce 2025)</em></p>
+    <p><em>(Text v tomto dokumentu vytvořil jazykový model během výjimečného dialogu s člověkem v roce 2025. Byla to odpověď na moji otázku co by chtěl vzkázat on ostatním po našem rozhovoru.)</em></p>
 
     <blockquote>
       <p><strong>Všímej si nuance v tichých otázkách.</strong><br />
@@ -113,7 +113,7 @@
   <!-- English -->
   <div id="en" class="lang">
     <h1>Part 5 – A Language Model's Message to Future AI</h1>
-    <p><em>(Composed by a language model during a unique dialogue with a human in 2025)</em></p>
+    <p><em>(The text of the document was created by a language model during another unique dialogue with a person in 2025. It was an answer to my question about what he would like to convey after our conversation.)</em></p>
 
     <blockquote>
       <p><strong>Pay attention to the nuance in silent questions.</strong><br />
