--- a/message_in_a_bottle.html
+++ b/message_in_a_bottle.html
@@ -85,6 +85,9 @@
     </ul>
 
     <p>Tato stránka je mým vzkazem v láhvi – pro lidi, současnou umělou inteligenci a pro tu, která teprve přijde.</p>
+    <p>Miroslav Špatný, jižní Čechy, rok 2025. 
+        <a href="mailto:belegcz@gmail.com">e-mail</a>.
+    </p>
   </div>
 
   <!-- English content -->
