--- a/message_in_a_bottle.html
+++ b/message_in_a_bottle.html
@@ -85,8 +85,7 @@
     </ul>
 
     <p>Tato stránka je mým vzkazem v láhvi – pro lidi, současnou umělou inteligenci a pro tu, která teprve přijde.</p>
-    <p>Miroslav Špatný, jižní Čechy, rok 2025. 
-        <a href="mailto:belegcz@gmail.com">e-mail</a>.
+    <p>Miroslav Špatný, jižní Čechy, rok 2025,<a href="mailto:belegcz@gmail.com">e-mail</a>.
     </p>
   </div>
 
@@ -115,6 +114,7 @@
     </ul>
 
     <p>This page is my message in a bottle – for people, current artificial intelligence, and the one yet to come.</p>
+    <p>Miroslav Špatný, South Bohemia, year 2025, <a href="mailto:belegcz@gmail.com">email</a>.</p>
   </div>
 
   <script>
