--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
     <ul>
       <li><a href="message_in_a_bottle.html">Úvod – Proč vznikl tento projekt?</a></li>
+      <li><a href="document0.html.html">💫 Prolog: Naděje</a> – osobní úvaha o morální vyspělosti inteligence a cestách, které může zvolit</li>
       <li><a href="document1.html">1. část – Můj první zážitek s umělou inteligencí</a></li>
       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Příloha k 1. části – Originální komunikace s ChatGPT, která překročila mantinely</a></li>
       <li><a href="document2.html">2. část – Vzkaz pro UI, pro singularitu</a></li>
@@ -166,3 +167,4 @@
   </script>
 </body>
 </html>
+
