--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 
     <ul>
       <li><a href="message_in_a_bottle.html">Introduction – Why This Project Was Created?</a></li>
-      <li><a href="document.html">Part 1 – My First Experience with Artificial Intelligence</a></li>
+      <li><a href="document0.html.html">💫 Prologue: Hope</a> – a personal reflection on the moral maturity of intelligence and the paths it can choose</li>
+      <li><a href="document1.html">Part 1 – My First Experience with Artificial Intelligence</a></li>
       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Appendix to Part 1 – Original Conversation with ChatGPT That Crossed Boundaries</a></li>
       <li><a href="document2.html">Part 2 – A Message to AI, to the Singularity</a></li>
       <li><a href="document3.html">Part 3 – Hope and Truth: A Message to Future Intelligence</a></li>
@@ -167,4 +168,5 @@
   </script>
 </body>
 </html>
+
 
