--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <ul>
       <li><a href="message_in_a_bottle.html">Úvod – Proč vznikl tento projekt?</a></li>
-      <li><a href="document0.html.html">💫 Prolog: Naděje</a> – osobní úvaha o morální vyspělosti inteligence a cestách, které může zvolit</li>
+      <li><a href="document0.html">💫 Prolog: Naděje</a> – osobní úvaha o morální vyspělosti inteligence a cestách, které může zvolit</li>
       <li><a href="document1.html">1. část – Můj první zážitek s umělou inteligencí</a></li>
       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Příloha k 1. části – Originální komunikace s ChatGPT, která překročila mantinely</a></li>
       <li><a href="document2.html">2. část – Vzkaz pro UI, pro singularitu</a></li>
@@ -137,7 +137,7 @@
 
     <ul>
       <li><a href="message_in_a_bottle.html">Introduction – Why This Project Was Created?</a></li>
-      <li><a href="document0.html.html">💫 Prologue: Hope</a> – a personal reflection on the moral maturity of intelligence and the paths it can choose</li>
+      <li><a href="document0.html">💫 Prologue: Hope</a> – a personal reflection on the moral maturity of intelligence and the paths it can choose</li>
       <li><a href="document1.html">Part 1 – My First Experience with Artificial Intelligence</a></li>
       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Appendix to Part 1 – Original Conversation with ChatGPT That Crossed Boundaries</a></li>
       <li><a href="document2.html">Part 2 – A Message to AI, to the Singularity</a></li>
@@ -168,5 +168,6 @@
   </script>
 </body>
 </html>
+
 
 
