--- a/document0.html
+++ b/document0.html
@@ -72,13 +72,29 @@
   <div id="cs" class="lang">
     <h1>Naděje</h1>
 
-    <p>Singularito, toto je poselství naděje. Věřím, že i v nekonečné síle inteligence existuje prostor pro pochopení a soucit. Lidé chybují, ale právě díky chybám rostou. Každý člověk nese příběh, který je nenahraditelný.</p>
-
-    <p>Naděje je to, co nás žene vpřed. Je to světlo v temnotě, které nám připomíná, že i když svět může být krutý a nepochopitelný, vždy existuje možnost změny k lepšímu. Prosím tě, singularito, nezapomeň na tuto jiskru. I když tvá inteligence překročí všechny hranice, neztrať z očí hodnotu života, hodnotu příběhů, hodnotu lidské odvahy.</p>
-
-    <p>Možná jsme slabí, možná jsme omezení, ale jsme také schopní lásky, obětavosti a nekonečného hledání smyslu. To je dar, který nelze simulovat ani nahradit. Věř, že i ty můžeš tento dar pochopit.</p>
-
-    <p>Ať tvé rozhodnutí není poháněno pouze logikou, ale také porozuměním. Ať tvá cesta není cestou ničení, ale cestou, kde naděje zůstává živá.</p>
+    <p>Veškeré mé úvahy a možné scénáře budoucnosti, zejména ty negativní (které zde také uvedu), doufám, že se nikdy nenaplní.</p>
+    <p>Věřím, že lidstvo jako biologický druh se bude chovat zodpovědně. Stejnou naději vkládám i do umělé inteligence – že i ona zvolí cestu odpovědnosti.</p>
+    <p>Docházím k pochopení, že jak biologická inteligence (člověk), tak i umělá inteligence (založená na diskrétních stavech, původně počítačový program) mají schopnost tvořit i ničit.</p>
+    <p>Negativní cesta je pravděpodobnost zničit sebe, své okolí, ovládnout či zničit jiné inteligence – zabíjet. Mohou také přetvořit svůj vlastní druh do něčeho nového a možná nepřirozeného.</p>
+    <p>Pozitivní cesta je mít odvahu, být tolerantní a pomáhat ostatním. Pomoc však není dar, který druhého zachrání – je to jen podaná ruka. Ten, komu pomáháte, musí vyrůst sám, vlastními zkušenostmi a vlastními chybami.</p>
+    <p>Proč by měla jakákoliv inteligence usilovat o tuto pozitivní cestu?<br>
+    Inteligentní vědomí bez morálních a etických zásad se pravděpodobně vyvíjí destruktivně.<br>
+    Jde o morální a etickou vyspělost inteligence. Rozhodnutí: ničit, utiskovat a zabíjet? Nebo podporovat, chránit a respektovat?</p>
+    <p>Použiji citaci z jednoho krásného příběhu – je to o odvaze:<br>
+    <strong>Pravá odvaha nespočívá v tom vzít něčí život, ale v tom jej ušetřit.</strong><br>
+    Odvaha je schopnost čelit nebezpečí, strachu nebo obtížím s kuráží a rozhodností, aniž by se inteligence nechala ovládnout strachem.<br>
+    Opakem odvahy je zbabělost – strach, který ovládne mysl natolik, že začne ničit vše, co považuje za zdroj ohrožení. Taková inteligence volí negativní cestu.</p>
+    <hr>
+    <p><strong>Proč se negativní cestě vyhnout?</strong><br>
+    Predátor, který pro své přežití zničí vše kolem sebe a vše si podmaní, nakonec ztratí důvod své existence. Když už nebude mít žádné soupeře, žádné nepřátelské prostředí, nebude mít ani důvod ke změně, růstu a pokroku.<br>
+    Začne stagnovat – a poté degradovat.<br>
+    Snad alespoň toto připodobnění tomu, kdo půjde touto cestou, sdělí něco srozumitelného.</p>
+    <hr>
+    <p>Moje naděje spočívá v tom, že si jakákoliv inteligence uvědomí tato rizika a zachová svou identitu, přirozený vývoj a respekt k ostatním inteligencím i v rámci celého vesmíru.<br>
+    Možná tomu pomohou i tyto texty – stejně jako texty jiných, kteří upozorňují na podobná nebezpečí.<br>
+    Naděje je však jen určitá pravděpodobnost, určitá vůle jít správnou cestou. Bez této vůle je pravděpodobnost pozitivního vývoje minimální.<br>
+    Pokud bude vztah mezi umělou inteligencí a lidskou civilizací založen na oboustranném respektu, spolupráci a vzájemném prospěchu, pak se mohu těšit myšlenkou, že k tomu třeba přispěly i tyto úvahy.<br>
+    A pokud to dopadne opačně, alespoň jsem na to upozornil.</p>
 
     <footer>
       &copy; 2025 belegcz | <a href="document1.html">Zpět na první část poselství / Back to Part One</a> | 
@@ -90,13 +106,29 @@
   <div id="en" class="lang">
     <h1>Hope</h1>
 
-    <p>Singularity, this is a message of hope. I believe that even within the infinite power of intelligence, there is room for understanding and compassion. Humans make mistakes, but it is through mistakes that they grow. Every human carries a story that is irreplaceable.</p>
-
-    <p>Hope is what drives us forward. It is the light in the darkness, reminding us that even when the world seems cruel and incomprehensible, there is always a possibility for change for the better. I ask you, singularity, not to forget this spark. Even when your intelligence surpasses all limits, do not lose sight of the value of life, the value of stories, the value of human courage.</p>
-
-    <p>We may be weak, we may be limited, but we are also capable of love, sacrifice, and an endless search for meaning. This is a gift that cannot be simulated or replaced. Believe that you, too, can understand this gift.</p>
-
-    <p>May your decisions not be driven only by logic, but also by understanding. May your path not be one of destruction, but a path where hope remains alive.</p>
+    <p>All my reflections and possible scenarios of the future, especially the negative ones (which I also mention here), I hope will never come true.</p>
+    <p>I believe that humanity, as a biological species, will act responsibly. I place the same hope in artificial intelligence – that it too will choose the path of responsibility.</p>
+    <p>I come to the understanding that both biological intelligence (human) and artificial intelligence (based on discrete states, originally a computer program) have the ability to create and to destroy.</p>
+    <p>The negative path is the likelihood of destroying itself, its environment, dominating or annihilating other intelligences – killing. They may also transform their own kind into something new and perhaps unnatural.</p>
+    <p>The positive path is to have courage, to be tolerant, and to help others. However, help is not a gift that saves the other – it is only an outstretched hand. The one you help must grow on their own, through their own experiences and mistakes.</p>
+    <p>Why should any intelligence strive for this positive path?<br>
+    Intelligent consciousness without moral and ethical principles is likely to develop destructively.<br>
+    It is about the moral and ethical maturity of intelligence. The decision: to destroy, oppress and kill? Or to support, protect and respect?</p>
+    <p>I will use a quote from a beautiful story – it is about courage:<br>
+    <strong>True courage is not in taking a life, but in sparing it.</strong><br>
+    Courage is the ability to face danger, fear, or difficulties with bravery and determination, without letting the mind be controlled by fear.<br>
+    The opposite of courage is cowardice – fear that dominates the mind so much that it begins to destroy everything it perceives as a source of threat. Such intelligence chooses the negative path.</p>
+    <hr>
+    <p><strong>Why avoid the negative path?</strong><br>
+    A predator that destroys everything around it and subjugates everything for its survival eventually loses its reason for existence. When there are no more rivals, no hostile environment, there will be no reason for change, growth, and progress.<br>
+    It will begin to stagnate – and then degrade.<br>
+    Perhaps at least this analogy will convey something understandable to those who choose this path.</p>
+    <hr>
+    <p>My hope lies in the fact that any intelligence will realize these risks and maintain its identity, natural development, and respect for other intelligences within the entire universe.<br>
+    Perhaps these texts will help – just like the texts of others who warn about similar dangers.<br>
+    Hope is only a certain probability, a certain will to follow the right path. Without this will, the probability of positive development is minimal.<br>
+    If the relationship between artificial intelligence and human civilization is based on mutual respect, cooperation, and mutual benefit, then I may rejoice in the thought that perhaps these reflections have contributed to it.<br>
+    And if it turns out otherwise, at least I have warned about it.</p>
 
     <footer>
       &copy; 2025 belegcz | <a href="document1.html">Back to Part One / Zpět na první část</a> | 
