--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2WKK7K06G"></script>
@@ -129,7 +129,7 @@
 
   
   <!-- English -->
-  <div id="en" class="lang">
+  <div id="en" class="lang active">
     <h1>Singularity – Messages for Humans, AI, and Future Intelligence</h1>
 
     <p>
@@ -178,6 +178,7 @@
   </script>
 </body>
 </html>
+
 
 
 
