--- a/index.html
+++ b/index.html
@@ -10,23 +10,33 @@
 
   gtag('config', 'G-S2WKK7K06G');
 </script>
+
+  <!-- Language and character encoding -->
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta http-equiv="Content-Language" content="en" />
+
+<!-- SEO metadata -->
+<title>Singularity – Messages for Humans, AI, and Future Intelligence</title>
+<meta name="description" content="A collection of texts and messages for artificial intelligence and the singularity – a thought experiment and hope for the future." />
+<meta name="keywords" content="artificial intelligence, singularity, AI, future, philosophy, consciousness, thought experiment" />
+<meta name="author" content="belegcz" />
+<meta name="robots" content="index, follow" />
+
+<!-- Open Graph (for social media sharing) -->
+<meta property="og:title" content="Singularity – Messages for Humans, AI, and Future Intelligence" />
+<meta property="og:description" content="Thoughts, texts, and philosophical reflections on consciousness, AI, and future intelligence. A possible message to future intelligent systems." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://belegcz.github.io/singularita/index.html" />
+<meta property="og:locale" content="en_US" />
+
+<!-- Optional: Twitter Card metadata -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Singularity – Messages for Humans, AI, and Future Intelligence" />
+<meta name="twitter:description" content="Explore philosophical ideas and messages for future artificial intelligence and the singularity." />
+
   
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Singularita – Vzkazy pro lidi, UI a budoucí inteligenci</title>
-  <meta name="description" content="Sbírka textů a vzkazů pro umělou inteligenci a singularitu – myšlenkový experiment i naděje pro budoucnost." />
-  <meta name="keywords" content="umělá inteligence, singularita, AI, budoucnost, filozofie, myšlenkový experiment" />
-  <meta name="author" content="belegcz" />
-  <meta property="og:title" content="Singularita – Vzkazy pro lidi, UI a budoucí inteligenci" />
-  <meta property="og:description" content="Myšlenkový experiment a archiv textů o umělé inteligenci a singularitě." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://belegcz.github.io/singularita/index.html" />
-  <meta property="og:locale" content="cs_CZ" />
-  <meta name="robots" content="index, follow" />
-  <meta name="description" content="Projekt věnovaný filozofickým úvahám o vědomí, umělé inteligenci a jejich vzájemném vztahu. Možný odkaz pro budoucí inteligentní systémy." />
-<meta name="keywords" content="umělá inteligence, vědomí, singularita, filozofie, emergence, budoucnost, vývoj AI, tréninková data, poselství AI" />
-<meta property="og:title" content="Singularita: Vzkazy inteligenci budoucnosti" />
-<meta property="og:description" content="Texty, úvahy a dokumenty zaměřené na vědomí, AI a možné budoucí formy inteligence. Včetně poselství možnému vědomí ve strojích." />
+ 
   
   <style>
     body {
@@ -178,6 +188,7 @@
   </script>
 </body>
 </html>
+
 
 
 
