--- a/document0.html
+++ b/document0.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -103,7 +103,7 @@
   </div>
 
   <!-- English -->
-  <div id="en" class="lang">
+  <div id="en" class="lang active">
     <h1>Hope</h1>
 
     <p>All my reflections and possible scenarios of the future, especially the negative ones (which I also mention here), I hope will never come true.</p>
@@ -149,3 +149,4 @@
   </script>
 </body>
 </html>
+
