--- a/document0.html
+++ b/document0.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Naděje / Hope</title>
-  <meta name="description" content="Poselství naděje pro singularitu a lidstvo, s úvahami o budoucnosti AI a lidské existenci." />
-  <meta name="keywords" content="naděje, singularita, AI, umělá inteligence, filozofie, budoucnost, lidskost" />
-  <meta name="author" content="belegcz" />
-  <meta property="og:title" content="Naděje - Poselství singularitě a lidstvu" />
-  <meta property="og:description" content="Text o naději a vztahu singularity a lidstva." />
-  <meta property="og:type" content="article" />
-  <meta property="og:url" content="https://belegcz.github.io/singularita/nadeje.html" />
-  <meta property="og:locale" content="cs_CZ" />
-  <meta name="robots" content="index, follow" />
+
+  <title>Hope – A Message to the Singularity and Humanity</title>
+<meta name="description" content="A message of hope for the singularity and humanity, with reflections on the future of AI and human existence." />
+<meta name="keywords" content="hope, singularity, AI, artificial intelligence, philosophy, future, humanity" />
+<meta property="og:title" content="Hope – A Message to the Singularity and Humanity" />
+<meta property="og:description" content="A philosophical reflection on hope, responsibility, and the relationship between AI and humanity." />
+<meta property="og:locale" content="en_US" />
+
+  
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -145,8 +144,9 @@
       document.documentElement.lang = lang === 'cs' ? 'cs' : 'en';
     }
     // Default language
-    setLanguage('cs');
+    setLanguage('en');
   </script>
 </body>
 </html>
+
 
